Enhance deployment step with file listing
Add echo and list command for published files before deployment.

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -36,7 +36,8 @@ jobs:
 
     - name: Deploy to server (ejemplo de despliegue)
       run: |
-        scp -r ./published username@server:/path/to/deploy
+        echo "Archivos publicados listos para el despliegue:"
+        ls -R ./published
 
 
 
